--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Sample Server component</title>
-</head>
-<body>
-
-</body>
-</html>
+<p>The Server Component</p>
