--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -13,7 +13,10 @@ class = "form-control"
         (click)="onCreateServer()">Add Server</button>
 <!--<p [innerText]="allowNewServer"></p>-->
 
-<p>{{serverCreationStatus}}</p>
+<!--<p>{{serverCreationStatus}}</p>-->
+<p *ngIf="serverCreated; else noServer">Server was created and the server name is {{serverName}}</p>
+<ng-template #noServer>
+  <p>no server created</p>
+</ng-template>
 
-<app-server></app-server>
 <app-server></app-server>
