Practice on attribute directives ngStyle

--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<p>{{'Server'}} with ID {{serverId}} has its status {{getServerStatus()}}</p>
+<p [ngStyle]="{backgroundColor: getColor()}">{{'Server'}} with ID {{serverId}} has its status {{getServerStatus()}}</p>
