--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -19,5 +19,5 @@ class = "form-control"
   <p>no server created</p>
 </ng-template>
 
-<app-server></app-server>
-<app-server></app-server>
+<app-server *ngFor="let server of servers"></app-server>
+
